Skills section horizontal overflowinf solved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,15 +38,6 @@ body {
 input {
   @apply bg-background-40 h-[44px] p-2 rounded-xl placeholder:text-font-gray placeholder:font-body  focus:ring-teal-400 focus:outline-teal-500 outline-none typography-body w-full;  /* Replace bg-gray-200 with your desired background color class */
 }
-input[type="checkbox"],
-input[type="radio"] {
-  @apply bg-background-40 rounded;
-}
-
-input[type="checkbox"]:checked,
-input[type="radio"]:checked {
-  @apply bg-teal-400 border-transparent;
-}
 
 h2{
   @apply font-bricolage text-h2 font-h2;
